cmake_minimum_required(VERSION 3.24)
project(course_from_foxford)

set(CMAKE_CXX_STANDARD 17)

add_executable(course_from_foxford main.cpp WorkWithTime.cpp Models.cpp Models02.cpp "binary shift.cpp" DefficultInput.cpp Struct.cpp hw.cpp "Pasword mad.cpp" "Q and stack.cpp" "Hecsogram 111253.cpp" "Divicions check.cpp" "Factoriization .cpp" "NOD AND NOK.cpp" Evclid.cpp binpow.cpp binserch.cpp "Ternarn search.cpp" "merging sort.cpp" "siple dp.cpp" "mad with bin.cpp")
